--- a/decks/kahoot.mdx
+++ b/decks/kahoot.mdx
@@ -167,7 +167,7 @@ Each of these code snippets use a feature of Node.js called <strong>Events</stro
 
 - We'll be playing a very basic game of Kahoot
 - Your bot is simply guessing should get 2/5 questions correct if you answer the first answer.
-- You'll need to change `000000` to the game pin provided by your leader.
+- You'll need to change `000000` to `08474619`.
 
 </Text>
 
@@ -258,7 +258,7 @@ Happy hacking 😉
 
 <Invert style={{color: 'white!important'}}>
 
-# Time for another test run! Good luck!
+# Time for another test run: 07056161! Good luck!
 
 </Invert>
 
@@ -287,6 +287,6 @@ round where you can do what ever you want. Here a couple of idea seeds:</Text>
 
 <Invert>
 
-<Text sx={{ color: 'purple', textShadow: '0 0 12px currentColor', fontSize: 10, fontWeight: 'bold' }}>Final Round!</Text>
+<Text sx={{ color: 'purple', textShadow: '0 0 12px currentColor', fontSize: 10, fontWeight: 'bold' }}>Final Round: 06654377!</Text>
 
 </Invert>
